<resources>
    <string name="app_name">PetHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrate">Registrate</string>
    <string name="iniciaSesion">Inicia sesión</string>
    <string name="contOlvidada">¿Contraseña olvidada?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo Electrónico</string>
    <string name="logo">LOGO</string>
    <string name="mostrar">Mostrar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="sexo">Sexo:</string>
    <string name="registrarse">Registrarse</string>
    <string name="seguidores">Seguidores</string>
    <string name="descripcion">Descripción</string>
    <string name="nombre">Nombre</string>
    <string name="seguidos">Seguidos</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="cero">0</string>
    <string name="perfil">Perfil</string>
    <string name="imagen_perfil">Selecciona tu imagen de perfil</string>
    <string name="aceptar">Aceptar</string>
    <string name="chatear">Chatear</string>
    <string name="seguir">Seguir</string>
    <string name="mascota">Mascota</string>
    <string name="raza">Raza:</string>
    <string name="edad">Edad</string>
    <string name="anadir">Añadir</string>
    <string name="registro_mascota">Selecciona una imagen para tu mascota</string>
    <string-array name="sexos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string-array name="razas">
        <item>Affenpinscher</item>
        <item>Akita</item>
        <item>Alaskan Malamute</item>
        <item>Beagle</item>
        <item>Boxer</item>
        <item>Bulldog</item>
        <item>Chihuahua</item>
        <item>Cocker Spaniel</item>
        <item>Dálmata</item>
        <item>Doberman</item>
        <item>Galgo</item>
        <item>Golden Retriever</item>
        <item>Husky Siberiano</item>
        <item>Labrador Retriever</item>
        <item>Mastín</item>
        <item>Pastor Alemán</item>
        <item>Pitbull</item>
        <item>Poodle</item>
        <item>Rottweiler</item>
        <item>San Bernardo</item>
        <item>Shar Pei</item>
        <item>Shih Tzu</item>
        <item>Yorkshire Terrier</item>
    </string-array>
</resources>