<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:hint="Correo:" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="60dp"
            android:hint="Contraseña:"
            android:password="true"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/chkMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginTop="60dp"
            android:pointerIcon="arrow"
            android:text="@string/mostrar" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="110dp"
            android:text="@string/iniciar_sesion" />

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130dp"
            android:layout_marginTop="170dp"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textStyle=""
            android:focusable="true" />

        <TextView
            android:id="@+id/txtContOlvidada"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="195dp"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/contOlvidada"
            android:textAlignment="center"
            android:textStyle=""
            android:focusable="true" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>